# juris

./: .gitignore  PRODUCT.md  README.md  docker-compose.yml  firestore.indexes.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  documents.py  health.py  ledger.py  users.py  voice.py
backend/app/config/: settings.py
backend/app/core/: auth.py  firebase.py
backend/app/interfaces/: retrieval.py
backend/app/models/: chunk.py  conversation.py  document.py  ledger.py  policy.py  user.py
backend/app/repositories/: chunk_repo.py  ledger_repo.py
backend/app/services/: chunking.py  conversations.py  documents.py  embedding.py  ledger.py  llm.py  policy.py  processing.py  rag.py  storage.py  users.py  voice.py
backend/app/utils/: logging.py
backend/scripts/: migrate_m2_documents.py
backend/tests/: conftest.py  test_auth.py  test_chat_ledger.py  test_chat_policy.py  test_conversations_api.py  test_conversations_service.py  test_document_model.py  test_documents_api.py  test_documents_service.py  test_firebase.py  test_health.py  test_ledger_api.py  test_ledger_models.py  test_ledger_repo.py  test_ledger_service.py  test_logging.py  test_m3_retrieval.py  test_m45_hardening.py  test_policy_models.py  test_policy_service.py  test_settings.py  test_storage_service.py  test_users.py  test_users_api.py  test_voice_api.py  test_voice_service.py
design-reviews/: M7.2-screenshot-notes.md
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  (+1 more)
(+96 files in other folders)
