[project]
name = "juris-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "firebase-admin>=6.6",
    "google-genai>=0.8",
    "markitdown[all]>=0.1.6",
    "numpy>=2.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "httpx>=0.28", "mypy>=1.14", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
no_implicit_reexport = false

[tool.uv]
prerelease = "allow"
